# V1

./: .env  .gitignore  ACTUAL_TECH_STACK.md  ARCHITECTURE.md  AWS_ARCHITECTURE.md  AWS_DEV_SETUP.md  CHANGELOG.md  FRONTEND_ALIGNMENT.md  FRONTEND_INTEGRATION.md  PROCESS_FLOW_ANALYSIS.md  QUERY_HISTORY_FEATURE_PLAN.md  QUICKSTART.md  README.md  SCALING_STRATEGY.md  TECH_STACK.md  TEST_RESULTS.md  USAGE_GUIDE.md  analytics-studio-cursor-prompts.md  analytics_studio.db  analytics_studio_cursor_prompt_pack_frontend_required_backend (1).md  debug_stock_inventory.py  main.py  prompt_for_chatbot.md  pyproject.toml  requirements.txt  sales_analytics.json  staff-engineer.md  test_db_connection.py  universal_reporting_dashboard_build_guide.md
alembic/: env.py
app/: __init__.py
app/api/: exception_handlers.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  logging_config.py
app/models/: __init__.py  calculation.py  changelog.py  dashboard.py  dataset.py  project.py  semantic.py  user.py
app/semantic/: __init__.py  llm_prompts.py  sales_schema.py  schema_loader.py  stock_llm_prompts.py
app/services/: calculation_engine.py  changelog_service.py  chat_service.py  dashboard_service.py  database_connection_service.py  dataset_service.py  (+11 more)
docs/: dashboard_architecture.md  dashboard_configuration_management.md  dynamic_dashboard_versioning.md
frontend/: .env  .gitignore  README.md  index.html  package-lock.json  package.json
prompts/: dashboard_documentation_prompt.md
scripts/: generate_sample_data.py  init_db.py  test_apis.py  test_apis.sh
(+72 files in other folders)
