[project]
name = "analytics-studio"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
